sand-box-app/overlays/dev/network-policies/platform-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: storefront-policy
  labels:
    app: storefront
spec:
  podSelector:
    matchLabels:
        app: storefront
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    - namespaceSelector:
        matchLabels:
            instance: sandbox
    - podSelector:
        matchLabels:
          instance: sandbox
    ports:
    - protocol: TCP
      port: 80      
  egress:
  - {}
